--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-:root {
-  font-size: 1.5em;
+body {
+  font: 1.5em Helvetica, Verdana, sans-serif;
 }
-
 body,
 thead {
   background-color: #14213d;
@@ -13,6 +12,7 @@ h1 {
 
 h2 {
   background-color: #fca311;
+  padding: 0.25em;
 }
 
 th {
@@ -21,11 +21,6 @@ th {
 
 thead {
   color: white;
-}
-
-table {
-  margin: auto;
-  width: 75%;
 }
 
 table,
@@ -38,6 +33,7 @@ td {
 /* Classes */
 
 .input-field {
+  margin: 0.2em;
 }
 
 /* IDs */
@@ -48,27 +44,49 @@ td {
   width: 90%;
 }
 
-#first-name-input {
+#form-wrapper {
+  margin: auto;
+  width: 75%;
 }
+
+#table-wrapper {
+  margin: auto;
+  width: 75%;
+}
+
+#first-name-input {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
 #last-name-input {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 }
 
 #employee-id-input {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
 }
 
 #employee-title-input {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
 }
 
 #annual-salary-input {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
 #submit-employee-info-button {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+  margin: 0.5em auto;
 }
 
 #input-form {
   display: grid;
-  grid-template-columns: 25% 25% 25%;
-  grid-template-rows: auto;
-  width: 75%;
-  margin: auto;
+  grid-template-columns: auto;
+  grid-template-rows: 1.5em 1.5em;
 }
