--- a/style.css
+++ b/style.css
@@ -46,12 +46,13 @@ td {
   background-color: #e5e5e5;
   margin: auto;
   width: 90%;
+  padding-bottom: 0.1em;
 }
 
 #form-wrapper,
 #table-wrapper {
   padding-top: 0;
-  margin: auto;
+  margin: 1em auto;
   width: 75%;
   border: 2px solid #fca311;
   border-radius: 15px 50px;
@@ -83,9 +84,13 @@ td {
 }
 
 #submit-employee-info-button {
+  background-color: #14213d;
+  color: white;
   grid-column: 3 / 4;
   grid-row: 2 / 3;
   margin: 0.5em auto;
+  border-radius: 5px;
+  width: 50%;
 }
 
 #input-form {
@@ -93,4 +98,8 @@ td {
   grid-template-columns: auto;
   grid-template-rows: 1.5em 1.5em;
   padding: 1em;
+}
+#monthly-cost-output {
+  text-align: right;
+  padding-right: 2em;
 }
