--- a/style.css
+++ b/style.css
@@ -14,19 +14,21 @@ h1 {
 
 h2 {
   background-color: #fca311;
-  padding: 0.25em;
+  padding: 0.3em 0.3em 0.3em 0.5em;
   margin: 0;
   border-radius: 10px 45px 0 0;
-}
-
-th {
-  width: 5%;
 }
 
 thead {
   color: white;
 }
+table {
+  width: 100%;
+}
 
+td {
+  text-align: center;
+}
 table,
 td {
   background-color: white;
@@ -35,9 +37,15 @@ td {
 }
 
 /* Classes */
+.delete-button {
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+}
 
 .input-field {
   margin: 0.2em;
+  padding-left: 0.5em;
 }
 
 /* IDs */
@@ -86,6 +94,7 @@ td {
 #submit-employee-info-button {
   background-color: #14213d;
   color: white;
+  cursor: pointer;
   grid-column: 3 / 4;
   grid-row: 2 / 3;
   margin: 0.5em auto;
@@ -98,6 +107,8 @@ td {
   grid-template-columns: auto;
   grid-template-rows: 1.5em 1.5em;
   padding: 1em;
+  width: 75%;
+  margin: auto;
 }
 #monthly-cost-output {
   text-align: right;
