--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
   font: 1.5em Helvetica, Verdana, sans-serif;
 }
+button {
+  cursor: pointer;
+}
 body,
 thead {
   background-color: #14213d;
@@ -92,16 +95,18 @@ td {
 }
 
 #submit-employee-info-button {
-  background-color: #14213d;
-  color: white;
-  cursor: pointer;
   grid-column: 3 / 4;
   grid-row: 2 / 3;
   margin: 0.5em auto;
-  border-radius: 5px;
   width: 50%;
 }
 
+#restore-table-button,
+#submit-employee-info-button {
+  border-radius: 5px;
+  background-color: #14213d;
+  color: white;
+}
 #input-form {
   display: grid;
   grid-template-columns: auto;
@@ -113,4 +118,10 @@ td {
 #monthly-cost-output {
   text-align: right;
   padding-right: 2em;
+}
+
+#restore-table-button {
+  display: inline-block;
+  margin-left: 2em;
+  vertical-align: middle;
 }
